# matrix-ocaml

./: .gitignore  README.md
neocaml/: dune-project
neocaml/lib/: api.ml  client.ml  crypto.ml  dune  event.ml  event_room.ml  events.ml  events_room.ml  file_helpers.ml  filter.ml  monitor.ml  neOlm.ml  neoError.ml  neo_infix.ml  neolm.ml  neolm_devices.ml  neolm_key_export.ml  neolm_key_requests.ml  neolm_outgoing_key_request.ml  neolm_sas.ml  neolm_sessions.ml  neolm_utils.ml  responses.ml  room.ml  toDevice.ml  types.ml  yojson_helpers.ml
neocaml/test/: dune  neocaml_test.ml
