(library
 (name neocaml)
 (libraries core
            core.uuid
            olm
            str
            lwt
            cohttp-lwt-unix
            pbkdf
            nocrypto
            nocrypto.unix
            base64
            yojson
            ppx_deriving_yojson.runtime)
 (preprocess (pps ppx_jane ppx_deriving_yojson)))
