(library
 (name neocaml_test)
 (inline_tests)
 (libraries base
            neocaml
            stdio
            lwt
            cohttp-lwt-unix
            yojson
            ppx_deriving_yojson.runtime)
            ; ppx_inline_test.runtime-lib)
 (preprocess (pps ppx_deriving_yojson ppx_inline_test)))
